@@ -1,3 +1,6 @@
+12 January 2012: Matthijs
+        - Fix bug #421: truncate pidfile on shutdown, before unlink.
+
 10 January 2012: Wouter
 	- removed unused variables.
 
